--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-parent</artifactId>
-			<version>2.6.2</version>
+			<version>2.6.3</version>
 			<relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -41,13 +41,13 @@
 			<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 			<lombok.version>1.18.20</lombok.version>
 			<gson.version>2.8.9</gson.version>
-			<spring.version>2.6.2</spring.version>
+			<spring.version>2.6.3</spring.version>
 			<spring.version.redis>2.6.1</spring.version.redis>
 			<h2database.version>2.1.210</h2database.version>
 			<javafaker.version>1.0.2</javafaker.version>
-			<spring.context.version>5.3.9</spring.context.version>
+			<spring.context.version>5.3.15</spring.context.version>
 			<postgres.version>42.3.2</postgres.version>
-			<mysql.version>8.0.25</mysql.version>
+			<mysql.version>8.0.28</mysql.version>
 			<liquibase.version>4.5.0</liquibase.version>
 			<fusionauth.version>5.0.0</fusionauth.version>
     </properties>
@@ -98,12 +98,6 @@
 					<artifactId>spring-boot-starter-test</artifactId>
 					<version>${spring.version}</version>
 					<scope>test</scope>
-					<exclusions>
-							<exclusion>
-									<groupId>org.junit.vintage</groupId>
-									<artifactId>junit-vintage-engine</artifactId>
-							</exclusion>
-					</exclusions>
 				</dependency>
 				<dependency>
 					<groupId>org.springframework</groupId>
@@ -179,7 +173,7 @@
 					<artifactId>fusionauth-jwt</artifactId>
 					<version>${fusionauth.version}</version>
 				</dependency>
-				<!-- Modules Startt -->
+				<!-- Modules Start -->
 				<dependency>
 					<groupId>br.com.sawcunha.dayoffmarker</groupId>
 					<artifactId>domain</artifactId>
@@ -246,6 +240,30 @@
 					<artifactId>lettuce-core</artifactId>
 					<version>6.1.6.RELEASE</version>
 				</dependency>
+				<dependency>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-core</artifactId>
+					<version>3.9.0</version>
+				</dependency>
+				<!-- test -->
+				<dependency>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+					<version>4.13.1</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-all</artifactId>
+					<version>1.10.19</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+					<version>5.7.0</version>
+					<scope>test</scope>
+				</dependency>
 			</dependencies>
     </dependencyManagement>
 
@@ -263,6 +281,11 @@
 						</excludes>
 						<skip>true</skip>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -293,5 +316,4 @@
 				</plugin>
 			</plugins>
     </build>
-
 </project>
