--- a/application/pom.xml
+++ b/application/pom.xml
@@ -34,14 +34,8 @@
 				<id>mysql</id>
 				<dependencies>
 					<dependency>
-						<groupId>mysql</groupId>
+						<groupId>com.mysql</groupId>
 						<artifactId>mysql-connector-j</artifactId>
-						<exclusions>
-							<exclusion>
-								<groupId>com.google.protobuf</groupId>
-								<artifactId>protobuf-java</artifactId>
-							</exclusion>
-						</exclusions>
 					</dependency>
 				</dependencies>
 			</profile>
