--- a/etc/resources/InsideDayOffMarkerJob-postgres.yml
+++ b/etc/resources/InsideDayOffMarkerJob-postgres.yml
@@ -74,10 +74,11 @@ application:
     cache:
       clean: "0 0 */12 * * *"
     holiday:
-      update:
+      create:
         cron: "0 0 */1 * * *"
       batch:
-        cron: "0 10 */1 * * *"
+        create:
+          cron: "0 10 */1 * * *"
 
 dom:
   taskexecutor:
