--- a/job/pom.xml
+++ b/job/pom.xml
@@ -34,14 +34,8 @@
 			<id>mysql</id>
 			<dependencies>
 				<dependency>
-					<groupId>mysql</groupId>
+					<groupId>com.mysql</groupId>
 					<artifactId>mysql-connector-j</artifactId>
-					<exclusions>
-						<exclusion>
-							<groupId>com.google.protobuf</groupId>
-							<artifactId>protobuf-java</artifactId>
-						</exclusion>
-					</exclusions>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -170,7 +164,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.8</version>
+				<version>0.8.10</version>
 				<executions>
 					<execution>
 						<id>default-prepare-agent</id>
