--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-parent</artifactId>
-			<version>3.0.8</version>
+			<version>3.1.1</version>
 			<relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -36,20 +36,18 @@
 			<maven.compiler.source>17</maven.compiler.source>
 			<maven.compiler.target>17</maven.compiler.target>
 
-			<spring-boot.version>3.0.8</spring-boot.version>
+			<spring-boot.version>3.1.1</spring-boot.version>
 			<spring.framework.version>6.0.10</spring.framework.version>
-			<spring-data-redis.version>3.0.7</spring-data-redis.version>
+			<spring-data-redis.version>3.1.1</spring-data-redis.version>
 
 			<checkstyle-maven-plugin.version>3.0.0</checkstyle-maven-plugin.version>
 			<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 			<lombok.version>1.18.28</lombok.version>
 			<gson.version>2.10.1</gson.version>
 
-			<javafaker.version>1.0.2</javafaker.version>
-
 			<postgres.version>42.6.0</postgres.version>
 			<mysql.version>8.0.33</mysql.version>
-			<liquibase.version>4.22.0</liquibase.version>
+			<liquibase.version>4.23.0</liquibase.version>
 
 			<mockito.version>5.3.1</mockito.version>
 			<mockito-inline.version>5.2.0</mockito-inline.version>
@@ -198,7 +196,7 @@
 					<version>${postgres.version}</version>
 				</dependency>
 				<dependency>
-					<groupId>mysql</groupId>
+					<groupId>com.mysql</groupId>
 					<artifactId>mysql-connector-j</artifactId>
 					<version>${mysql.version}</version>
 				</dependency>
