--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -18,11 +18,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>br.com.insidesoftwares</groupId>
+            <groupId>br.com.insidesoftwares.commons</groupId>
             <artifactId>utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>br.com.insidesoftwares</groupId>
+            <groupId>br.com.insidesoftwares.commons</groupId>
             <artifactId>exception</artifactId>
         </dependency>
         <dependency>
@@ -50,10 +50,6 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-            <artifactId>resources</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
