--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -42,11 +42,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>br.com.insidesoftwares</groupId>
+            <groupId>br.com.insidesoftwares.commons</groupId>
             <artifactId>utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>br.com.insidesoftwares</groupId>
+            <groupId>br.com.insidesoftwares.commons</groupId>
             <artifactId>exception</artifactId>
         </dependency>
 
