--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -18,11 +18,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>br.com.insidesoftwares</groupId>
+            <groupId>br.com.insidesoftwares.commons</groupId>
             <artifactId>utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>br.com.insidesoftwares</groupId>
+            <groupId>br.com.insidesoftwares.commons</groupId>
             <artifactId>exception</artifactId>
         </dependency>
 
