--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 		<module>specification</module>
 		<module>service</module>
 		<module>controller</module>
-		<module>resources</module>
 		<module>server/application</module>
 		<module>server/job</module>
 		<module>coverage</module>
@@ -20,8 +19,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.1.3</version>
+		<relativePath/>
 	</parent>
 
 	<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
@@ -34,26 +33,32 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 
-		<spring-boot.version>3.1.2</spring-boot.version>
+		<spring-boot.version>3.1.3</spring-boot.version>
 		<spring.framework.version>6.0.11</spring.framework.version>
-		<spring-data-redis.version>3.1.2</spring-data-redis.version>
+		<spring-data-redis.version>3.1.3</spring-data-redis.version>
 
 		<checkstyle-maven-plugin.version>3.0.0</checkstyle-maven-plugin.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 		<lombok.version>1.18.28</lombok.version>
 		<gson.version>2.10.1</gson.version>
 
-		<postgres.version>42.6.0</postgres.version>
-		<mysql.version>8.1.0</mysql.version>
-		<liquibase.version>4.23.0</liquibase.version>
+		<postgresql.version>42.6.0</postgresql.version>
+		<mysql-connector-j.version>8.1.0</mysql-connector-j.version>
+		<liquibase.version>4.23.1</liquibase.version>
 
-		<mockito.version>5.3.1</mockito.version>
+		<mockito.version>5.5.0</mockito.version>
 		<mockito-inline.version>5.2.0</mockito-inline.version>
-		<junit-jupiter.version>5.9.3</junit-jupiter.version>
+		<junit-jupiter.version>5.10.0</junit-jupiter.version>
 
 		<spring-cloud-starter-netflix-eureka-client.version>4.0.3</spring-cloud-starter-netflix-eureka-client.version>
 		<spring-cloud-starter.version>4.0.4</spring-cloud-starter.version>
 		<spring-boot-admin-starter-client.version>3.1.4</spring-boot-admin-starter-client.version>
+
+        <junit-platform-launcher.version>1.10.0</junit-platform-launcher.version>
+        <testcontainers-bom.version>1.19.0</testcontainers-bom.version>
+
+        <snakeyaml.version>2.1</snakeyaml.version>
+        <json.version>20230618</json.version>
 	</properties>
 
 	<profiles>
@@ -71,12 +76,12 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>br.com.insidesoftwares</groupId>
+				<groupId>br.com.insidesoftwares.commons</groupId>
 				<artifactId>utils</artifactId>
 				<version>1.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>br.com.insidesoftwares</groupId>
+				<groupId>br.com.insidesoftwares.commons</groupId>
 				<artifactId>exception</artifactId>
 				<version>1.0-SNAPSHOT</version>
 			</dependency>
@@ -131,18 +136,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<version>${spring-boot.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-test</artifactId>
-				<version>${spring.framework.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-cache</artifactId>
 				<version>${spring-boot.version}</version>
 			</dependency>
@@ -191,12 +184,12 @@
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>${postgres.version}</version>
+				<version>${postgresql.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.mysql</groupId>
 				<artifactId>mysql-connector-j</artifactId>
-				<version>${mysql.version}</version>
+				<version>${mysql-connector-j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.liquibase</groupId>
@@ -237,11 +230,6 @@
 			</dependency>
 			<dependency>
 				<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-				<artifactId>resources</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
 				<artifactId>configuration</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -255,17 +243,29 @@
 				<artifactId>job</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-				<artifactId>specification</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+            <dependency>
+                <groupId>br.com.insidesoftwares.dayoffmarker</groupId>
+                <artifactId>specification</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 			<dependency>
 				<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
 				<artifactId>controller</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<!-- test -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.framework.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-testcontainers</artifactId>
@@ -278,6 +278,12 @@
 				<version>${junit-jupiter.version}</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
@@ -293,25 +299,40 @@
 			<dependency>
 				<groupId>org.junit.platform</groupId>
 				<artifactId>junit-platform-launcher</artifactId>
-				<version>1.10.0</version>
+				<version>${junit-platform-launcher.version}</version>
 				<scope>test</scope>
 			</dependency>
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
-                <version>1.18.3</version>
+                <version>${testcontainers-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- test -->
             <!-- Swagger -->
 			<dependency>
 				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-				<version>2.1.0</version>
+				<version>2.2.0</version>
 			</dependency>
 
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.version}</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
